Tue Mar 27 08:46:29 GMT 2012  Olly Betts <olly@survex.com>

	* api/compactor.cc: Include the xapian sub-headers we actually use
	  rather than xapian.h, to avoid needless rebuilds.

Tue Mar 27 08:33:28 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING: Add example of deprecating a pure virtual method.

Tue Mar 27 08:30:17 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Sat Mar 24 12:33:44 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_databasereplicator.cc: Fix signed vs unsigned
	  comparison warning with GCC 4.4.3.

Sat Mar 24 12:26:13 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h,queryparser/queryparser_internal.h:
	  Change the default stemming strategy to STEM_SOME, to eliminate
	  the API gotcha that setting a stemmer is ignored until you also
	  set a strategy.
	* tests/queryparsertest.cc: Add testcase qp_defaultstrategysome1 to
	  check that the default is STEM_SOME.

Fri Mar 23 04:29:32 GMT 2012  Olly Betts <olly@survex.com>

	* tests/perftest/perftest.cc: Fix comment cut-and-paste error.

Fri Mar 23 04:28:24 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am: Use git commit hash in the title of a coverage report
	  generated from a git tree.

Thu Mar 22 04:29:38 GMT 2012  Olly Betts <olly@survex.com>

	* xapian-core.spec.in: Remove xapian-chert-update.

Mon Mar 19 05:42:50 GMT 2012  Olly Betts <olly@survex.com>

	* matcher/multiandpostlist.cc: Don't count unweighted subqueries of
	  MultiAndPostList for percentage calculations, as OP_FILTER maps to
	  MultiAndPostList now.  (ticket#590)
	* tests/api_percentages.cc: Regression test topercent6.

Sun Mar 18 23:24:04 GMT 2012  Dan Colish <dcolish@>

	* backends/brass/brass_databasereplicator.cc: size out buffer to the
	  incoming blocksize

Sun Mar 18 17:02:14 GMT 2012  Dan Colish <dcolish@>

	* .gitignore: ignore /.deps as well

Sun Mar 18 16:46:45 GMT 2012  Dan Colish <dcolish@>

	* .gitignore:Update gitignore for bump to libxapian-1.3